...
        android:background="?attr/dialogBackground"
        android:layout_width="match_parent" android:layout_height="match_parent">

        <View style="?attr/sheetEdgeWeak" />

        <com.forrestguice.support.constraint.ConstraintLayout
            android:id="@+id/dialog_header" android:orientation="horizontal"
            android:layout_gravity="center" android:layout_marginTop="4dp"
            android:layout_width="match_parent" android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="0dp" android:layout_height="wrap_content"
                android:layout_gravity="center" android:gravity="center"
...
                    android:layout_gravity="end|center_vertical"
                    android:src="?attr/icActionPrevious" android:contentDescription="@string/action_prevYear"
                    android:background="?attr/selectableItemBackground" />

                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                    android:layout_gravity="center" android:gravity="center"
                    android:id="@+id/text_title1" android:text="2022" tools:ignore="HardcodedText"
                    style="@style/EquinoxDialogTitleStyle" android:visibility="visible"
                    android:paddingTop="8dp" android:paddingBottom="8dp"
                    android:background="?attr/selectableItemBackground"
                    app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent" />

                <com.forrestguice.support.widget.ImageButton
...
