...
                android:orientation="vertical"
                android:background="?attr/timeCardBackground"
                android:layout_marginRight="?attr/activityMargin" android:layout_marginLeft="?attr/activityMargin"
                android:layout_marginTop="0dp" android:layout_marginBottom="6dp">

                <com.forrestguice.suntimeswidget.equinox.EquinoxCardView
                    android:id="@+id/info_date_solsticequinox"
                    android:layout_width="match_parent" android:layout_height="wrap_content"
                    android:layout_margin="0dp" android:padding="0dp"
                    android:background="?attr/selectableItemBackground"
                    android:focusable="true" android:clickable="true"
                    android:descendantFocusability="afterDescendants"
                    app:minimized="true" />
...
