/**
    Copyright (C) 2025 Forrest Guice
    This file is part of SuntimesWidget.

    SuntimesWidget is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    SuntimesWidget is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with SuntimesWidget.  If not, see <http://www.gnu.org/licenses/>.
*/

package com.forrestguice.suntimeswidget.equinox;

import android.app.Activity;
import android.content.Context;

import com.forrestguice.suntimeswidget.RetryRule;
import com.forrestguice.suntimeswidget.calculator.settings.SolsticeEquinoxMode;
import com.forrestguice.suntimeswidget.calculator.settings.TimeFormatMode;
import com.forrestguice.suntimeswidget.calculator.settings.TrackingMode;
import com.forrestguice.suntimeswidget.support.espresso.ViewAssertionHelper;
import com.forrestguice.suntimeswidget.alarmclock.ui.AlarmCreateDialogTest;
import com.forrestguice.suntimeswidget.BehaviorTest;
import com.forrestguice.suntimeswidget.DialogTest;
import com.forrestguice.suntimeswidget.R;
import com.forrestguice.suntimeswidget.SuntimesActivity;
import com.forrestguice.suntimeswidget.SuntimesActivityTestBase;
import com.forrestguice.suntimeswidget.calculator.CalculatorProviderTest;
import com.forrestguice.suntimeswidget.graph.LightMapDialogTest;
import com.forrestguice.suntimeswidget.map.WorldMapDialogTest;
import com.forrestguice.suntimeswidget.moon.MoonDialogTest;
import com.forrestguice.suntimeswidget.settings.AppSettings;
import com.forrestguice.suntimeswidget.calculator.settings.SolarEvents;
import com.forrestguice.suntimeswidget.settings.WidgetSettings;
import com.forrestguice.util.InstrumentationUtils;
import com.forrestguice.util.SuntimesJUnitTestRunner;
import com.forrestguice.util.SystemTimeFormat;

import androidx.annotation.Nullable;
import androidx.test.filters.LargeTest;
import androidx.test.rule.ActivityTestRule;

import org.junit.After;
import org.junit.Before;
import org.junit.Rule;
import org.junit.Test;
import org.junit.runner.RunWith;

import java.io.IOException;
import java.text.SimpleDateFormat;
import java.util.Calendar;

import static com.forrestguice.suntimeswidget.DialogTest.DialogRobot.lastYear;
import static com.forrestguice.suntimeswidget.DialogTest.DialogRobot.nextYear;
import static com.forrestguice.suntimeswidget.DialogTest.DialogRobot.thisYear;
import static androidx.test.espresso.Espresso.onView;
import static androidx.test.espresso.Espresso.openActionBarOverflowOrOptionsMenu;
import static androidx.test.espresso.action.ViewActions.click;
import static androidx.test.espresso.action.ViewActions.pressBack;
import static androidx.test.espresso.action.ViewActions.swipeLeft;
import static androidx.test.espresso.action.ViewActions.swipeRight;
import static androidx.test.espresso.assertion.ViewAssertions.doesNotExist;
import static androidx.test.espresso.assertion.ViewAssertions.matches;
import static androidx.test.espresso.matcher.RootMatchers.isPlatformPopup;
import static androidx.test.espresso.matcher.ViewMatchers.hasMinimumChildCount;
import static androidx.test.espresso.matcher.ViewMatchers.hasSibling;
import static androidx.test.espresso.matcher.ViewMatchers.isDisplayed;
import static androidx.test.espresso.matcher.ViewMatchers.withChild;
import static androidx.test.espresso.matcher.ViewMatchers.withId;
import static androidx.test.espresso.matcher.ViewMatchers.withParent;
import static androidx.test.espresso.matcher.ViewMatchers.withText;

import static com.forrestguice.suntimeswidget.support.espresso.ViewAssertionHelper.assertClickable;
import static com.forrestguice.suntimeswidget.support.espresso.ViewAssertionHelper.assertShown;
import static com.forrestguice.suntimeswidget.support.espresso.matcher.ViewMatchersContrib.isCheckBoxWithTextInDropDownMenu;
import static com.forrestguice.suntimeswidget.support.espresso.matcher.ViewMatchersContrib.isMenuDropDownListView;
import static com.forrestguice.suntimeswidget.support.espresso.matcher.ViewMatchersContrib.isRadioButtonWithTextInDropDownMenu;
import static com.forrestguice.suntimeswidget.support.espresso.matcher.ViewMatchersContrib.withTextAsDate;
import static org.hamcrest.CoreMatchers.allOf;
import static org.junit.Assert.assertEquals;
import static org.junit.Assert.assertFalse;
import static org.junit.Assert.assertTrue;

@LargeTest
@BehaviorTest
@RunWith(SuntimesJUnitTestRunner.class)
public class EquinoxCardDialogTest extends SuntimesActivityTestBase
{
    @Rule
    public ActivityTestRule<SuntimesActivity> activityRule = new ActivityTestRule<>(SuntimesActivity.class);

    @Rule
    public RetryRule retry = new RetryRule(3);

    @Before
    public void beforeTest() throws IOException {
        setAnimationsEnabled(false);
        saveConfigState(InstrumentationUtils.getContext());
        overrideConfigState(InstrumentationUtils.getContext());
    }
    @After
    public void afterTest() throws IOException {
        setAnimationsEnabled(true);
        restoreConfigState(InstrumentationUtils.getContext());
    }

    @Override
    public void overrideConfigState(Context context) {
        super.overrideConfigState(context);
        AppSettings.saveShowCrossQuarterPref(context, false);
    }
    @Override
    protected void saveConfigState(Context context) {
        savedState_crossQuarterDays = AppSettings.loadShowCrossQuarterPref(context);
        savedState_trackingMode = WidgetSettings.loadTrackingModePref(context, 0);
    }
    @Override
    protected void restoreConfigState(Context context) {
        AppSettings.saveShowCrossQuarterPref(context, savedState_crossQuarterDays);
        WidgetSettings.saveTrackingModePref(context, 0, savedState_trackingMode);
    }
    protected boolean savedState_crossQuarterDays = false;
    protected TrackingMode savedState_trackingMode = null;

    ////////////////////////////////////////////////////////////////
    ////////////////////////////////////////////////////////////////

    @Test
    public void test_mainCard_showEquinox()
    {
        EquinoxDialogRobot robot = new EquinoxDialogRobot();
        Activity context = activityRule.getActivity();
        if (AppSettings.loadShowEquinoxPref(context))
        {
            onView(withId(R.id.info_date_solsticequinox)).check(assertShown);
            onView(withId(R.id.info_date_solsticequinox)).check(assertClickable);

            if (!AppSettings.loadShowEquinoxDatePref(context)) {
                robot.assertCard_allHideDateField(context);
            }

            onView(withId(R.id.info_date_solsticequinox)).perform(click());
            robot.assertDialogShown(context).sleep(1000)
                    .cancelDialog(context);

        } else {
            onView(withId(R.id.info_date_solsticequinox)).check(ViewAssertionHelper.assertHidden);
        }
    }

    @Test
    public void test_EquinoxDialog()
    {
        Activity context = activityRule.getActivity();
        AppSettings.saveShowCrossQuarterPref(context, false);

        EquinoxDialogRobot robot = new EquinoxDialogRobot();
        robot.showDialog(context)
                .assertDialogShown(context);
                //.captureScreenshot(context, "suntimes-dialog-equinox0")

        robot.clickYearLabel(context).sleep(1500)
                .assertCard_allShowCorrectDate(context, thisYear(), true);

        // :
        robot.showOverflowMenu(context)
                .assertOverflowMenuShown(context).sleep(500)
                .cancelOverflowMenu(context).sleep(500);

        // : -> Options
        robot.showOverflowMenu(context).sleep(500)
                .clickOverflowMenu_Options(context).sleep(500)
                .assertOverflowMenu_Options(context)
                .cancelOverflowMenu_Options(context).sleep(500);

        // : -> Track
        robot.showOverflowMenu(context).sleep(500)
                .clickOverflowMenu_Track(context).sleep(500)
                .assertOverflowMenu_Track(context)
                .cancelOverflowMenu_Track(context).sleep(500);

        // : -> Help
        robot.showOverflowMenu(context)
                .clickOverflowMenu_Help(context)
                .assertHelpShown(context).sleep(500)
                .cancelHelp(context).sleep(500);

        robot.doubleRotateDevice(context)
                .assertDialogShown(context)
                .cancelDialog(context);
    }

    @Test
    public void test_EquinoxDialog_changeYear()
    {
        Activity context = activityRule.getActivity();
        AppSettings.saveShowCrossQuarterPref(context, false);

        EquinoxDialogRobot robot = new EquinoxDialogRobot();
        robot.showDialog(context)
                .assertDialogShown(context);

        // <- Year -> (buttons)
        robot.clickYearLabel(context)
                .assertYearLabelIs(thisYear()).sleep(1000)
                .assertCard_allShowCorrectDate(context, thisYear(), true);

        robot.clickYearPrevious(context)
                .assertYearLabelIs(lastYear())
                .assertCard_allMarkedPast(context);

        robot.clickYearLabel(context)
                .assertYearLabelIs(thisYear());
        robot.clickYearNext(context).sleep(1000)
                .assertYearLabelIs(nextYear())
                .assertCard_allMarkedFuture(context);

        // <- Year -> (swipe gesture)
        robot.clickYearLabel(context)
                .assertYearLabelIs(thisYear());
        robot.swipeCardPrevious(context).sleep(1000)
                .assertYearLabelIs(lastYear())
                .assertCard_allMarkedPast(context);

        robot.clickYearLabel(context)
                .assertYearLabelIs(thisYear());
        robot.swipeCardNext(context).sleep(1000)
                .assertYearLabelIs(nextYear())
                .assertCard_allMarkedFuture(context);

        robot.clickYearLabel(context);
        robot.cancelDialog(context).sleep(1500)
                .assertDialogNotShown(context);
    }

    @Test
    public void test_EquinoxDialog_collapseExpand()
    {
        Activity context = activityRule.getActivity();
        EquinoxDialogRobot robot = new EquinoxDialogRobot();
        robot.showDialog(context)
                .assertDialogShown(context);

        robot.collapseSheet().sleep(1500);
        robot.assertSheetIsCollapsed(context);
        robot.expandSheet().sleep(1500)
                .assertDialogShown(context);

        robot.cancelDialog(context).sleep(1500)
                .assertDialogNotShown(context);
    }

    @Test
    public void test_EquinoxDialog_tracking()
    {
        Activity context = activityRule.getActivity();
        WidgetSettings.saveTrackingModePref(context, 0, TrackingMode.SOONEST);   // test begins with tracking set to "soonest"

        EquinoxDialogRobot robot = new EquinoxDialogRobot();
        robot.showDialog(context)
                .assertDialogShown(context)
                .showOverflowMenu(context).sleep(500)
                .clickOverflowMenu_Track(context).sleep(500)
                .assertOverflowMenu_Track_isSoonest(context)            // assert "soonest"

                .clickOverflowMenu_Track_Closest(context).sleep(1000)   // click "closest"
                .assertDialogNotShown(context);    // closes dialog
        assertEquals(TrackingMode.CLOSEST, WidgetSettings.loadTrackingModePref(context, 0));

        robot.showDialog(context)
                .assertDialogShown(context)
                .showOverflowMenu(context).sleep(500)
                .clickOverflowMenu_Track(context).sleep(500)
                .assertOverflowMenu_Track_isClosest(context)            // assert "closest"

                .clickOverflowMenu_Track_Recent(context).sleep(1000)    // "click "recent"
                .assertDialogNotShown(context);    // closes dialog
        assertEquals(TrackingMode.RECENT, WidgetSettings.loadTrackingModePref(context, 0));

        robot.showDialog(context)
                .assertDialogShown(context)
                .showOverflowMenu(context).sleep(500)
                .clickOverflowMenu_Track(context).sleep(500)
                .assertOverflowMenu_Track_isRecent(context)            // assert "recent"

                .clickOverflowMenu_Track_Soonest(context).sleep(1000)    // "click "soonest"
                .assertDialogNotShown(context);    // closes dialog
        assertEquals(TrackingMode.SOONEST, WidgetSettings.loadTrackingModePref(context, 0));

        robot.showDialog(context)
                .assertDialogShown(context)
                .showOverflowMenu(context).sleep(500)
                .clickOverflowMenu_Track(context).sleep(500)
                .assertOverflowMenu_Track_isSoonest(context)            // assert "soonest"
                .cancelOverflowMenu_Track(context).sleep(500);

        robot.cancelDialog(context)
                .assertDialogNotShown(context);
    }

    @Test
    public void test_EquinoxDialog_crossQuarterDays()
    {
        Activity context = activityRule.getActivity();
        AppSettings.saveShowCrossQuarterPref(context, false);    // test begins with "show cross-quarter days" set to false

        EquinoxDialogRobot robot = new EquinoxDialogRobot();
        robot.showDialog(context)
                .assertDialogShown(context);

        // : -> Options -> Show Cross Quarter Days (toggle it twice)
        robot.showOverflowMenu(context).sleep(500)
                .clickOverflowMenu_Options(context).sleep(500)
                .assertOverflowMenu_Options_crossQuarterDaysDisabled(context)
                .clickOverflowMenu_Options_CrossQuarterDays(context).sleep(1000);
        assertTrue(AppSettings.loadShowCrossQuarterPref(context));

        robot.showOverflowMenu(context).sleep(500)
                .clickOverflowMenu_Options(context).sleep(500)
                .assertOverflowMenu_Options(context)
                .assertOverflowMenu_Options_crossQuarterDaysEnabled(context)
                .clickOverflowMenu_Options_CrossQuarterDays(context).sleep(1000);
        assertFalse(AppSettings.loadShowCrossQuarterPref(context));

        robot.showOverflowMenu(context).sleep(500)
                .clickOverflowMenu_Options(context).sleep(500)
                .assertOverflowMenu_Options(context)
                .assertOverflowMenu_Options_crossQuarterDaysDisabled(context)
                .cancelOverflowMenu(context).sleep(1000);

        robot.cancelDialog(context).sleep(1500)
                .assertDialogNotShown(context);
    }

    @Test
    public void test_EquinoxDialog_cardItems()
    {
        Activity context = activityRule.getActivity();
        EquinoxDialogRobot robot = new EquinoxDialogRobot();
        robot.showDialog(context)
                .assertDialogShown(context)
                .assertCard_noFocus(context);

        // click each item and check focus
        SolsticeEquinoxMode[] modes = (AppSettings.loadShowCrossQuarterPref(context)
                ? SolsticeEquinoxMode.values() : SolsticeEquinoxMode.partialValues(false));

        for (SolsticeEquinoxMode mode : modes)
        {
            robot.clickCardItem(context, mode).sleep(1000)
                    .assertCard_isFocused(context, mode, true)

                    .clickCardItem_menu(context, mode).sleep(500)
                    .assertCard_isMenuShown(context, mode)
                    .cancelCardItem_menu(context, mode).sleep(500);
        }

        robot.cancelDialog(context);
    }

    @Test
    public void test_EquinoxDialog_cardItems_share()
    {
        Activity context = activityRule.getActivity();
        EquinoxDialogRobot robot = new EquinoxDialogRobot();
        robot.showDialog(context)
                .assertDialogShown(context);

        SolsticeEquinoxMode[] modes = AppSettings.loadShowCrossQuarterPref(context)
                ? SolsticeEquinoxMode.values()
                : SolsticeEquinoxMode.partialValues(false);

        for (SolsticeEquinoxMode mode : modes)
        {
            robot.clickCardItem(context, mode).sleep(1000)
                    .clickCardItem_menu(context, mode).sleep(500)
                    .clickCardItem_menu_share(context, mode);
        }
        robot.cancelDialog(context);
    }

    @Test
    public void test_EquinoxDialog_cardItems_setAlarm()
    {
        Activity context = activityRule.getActivity();
        EquinoxDialogRobot robot = new EquinoxDialogRobot();
        robot.showDialog(context)
                .assertDialogShown(context);

        SolsticeEquinoxMode[] modes = AppSettings.loadShowCrossQuarterPref(context)
                ? SolsticeEquinoxMode.values()
                : SolsticeEquinoxMode.partialValues(false);

        for (SolsticeEquinoxMode mode : modes)
        {
            robot.clickCardItem(context, mode).sleep(1000)
                    .clickCardItem_menu(context, mode).sleep(500)
                    .clickCardItem_menu_setAlarm(context, mode).sleep(500);

            new AlarmCreateDialogTest.AlarmDialogRobot()
                    .assertDialogShown(context)
                    .assertTabAtPosition(context, 0)
                    .assertAlarmDialogEvent(SolarEvents.valueOf(mode))
                    // TODO assertDate
                    .cancelDialog(context);
        }

        robot.cancelDialog(context);
    }

    @Test
    public void test_EquinoxDialog_cardItems_viewWith_suntimes()
    {
        Activity context = activityRule.getActivity();
        EquinoxDialogRobot robot = new EquinoxDialogRobot();
        robot.showDialog(context)
                .assertDialogShown(context);

        SolsticeEquinoxMode[] modes = AppSettings.loadShowCrossQuarterPref(context)
                ? SolsticeEquinoxMode.values()
                : SolsticeEquinoxMode.partialValues(false);

        for (SolsticeEquinoxMode mode : modes)
        {
            robot.assertDialogShown(context)
                    .assertCard_showsDateFor(context, mode, thisYear(), true);

            robot.clickCardItem(context, mode).sleep(1000)
                    .clickCardItem_menu(context, mode).sleep(500)
                    .clickCardItem_menu_viewWith(context, mode).sleep(500)
                    .clickCardItem_menu_viewWith_Suntimes(context, mode).sleep(1000)
                    .assertSheetIsCollapsed(context);

            //Calendar eventTime = CalculatorProviderTest.lookupEventTime(context, mode, thisYear(), robot1.now(context).getTimeZone());
            // TODO assertDate

            robot.expandSheet().sleep(1000);
        }

        robot.cancelDialog(context);
    }

    @Test
    public void test_EquinoxDialog_cardItems_viewWith_sun()
    {
        Activity context = activityRule.getActivity();
        EquinoxDialogRobot robot = new EquinoxDialogRobot();
        robot.showDialog(context)
                .clickYearLabel(context)
                .assertDialogShown(context)
                .assertYearLabelIs(thisYear());

        SolsticeEquinoxMode[] modes = AppSettings.loadShowCrossQuarterPref(context)
                ? SolsticeEquinoxMode.values()
                : SolsticeEquinoxMode.partialValues(false);

        LightMapDialogTest.LightMapDialogRobot robot1 = new LightMapDialogTest.LightMapDialogRobot();
        for (SolsticeEquinoxMode mode : modes)
        {
            Calendar eventTime = CalculatorProviderTest.lookupEventTime(context, mode, thisYear(), robot1.now(context).getTimeZone());
            robot.assertCard_showsDateFor(context, mode, thisYear(), true);
            robot.clickCardItem(context, mode).sleep(1000)
                    .clickCardItem_menu(context, mode).sleep(500)
                    .clickCardItem_menu_viewWith(context, mode).sleep(500)
                    .clickCardItem_menu_viewWith_Sun(context, mode).sleep(1000);
            robot1.assertDialogShown(context)
                    .assertShowsDate(context, eventTime)
                    .cancelDialog(context);
        }
        robot.cancelDialog(context);
    }

    @Test
    public void test_EquinoxDialog_cardItems_viewWith_moon()
    {
        Activity context = activityRule.getActivity();
        EquinoxDialogRobot robot = new EquinoxDialogRobot();
        robot.showDialog(context)
                .assertDialogShown(context)
                .clickYearLabel(context)
                .assertYearLabelIs(thisYear());

        SolsticeEquinoxMode[] modes = AppSettings.loadShowCrossQuarterPref(context)
                ? SolsticeEquinoxMode.values()
                : SolsticeEquinoxMode.partialValues(false);

        MoonDialogTest.MoonDialogRobot robot1 = new MoonDialogTest.MoonDialogRobot();
        for (SolsticeEquinoxMode mode : modes)
        {
            Calendar eventTime = CalculatorProviderTest.lookupEventTime(context, mode, thisYear(), robot1.now(context).getTimeZone());
            robot.assertCard_showsDateFor(context, mode, thisYear(), true);
            robot.clickCardItem(context, mode).sleep(1000)
                    .clickCardItem_menu(context, mode).sleep(500)
                    .clickCardItem_menu_viewWith(context, mode).sleep(500)
                    .clickCardItem_menu_viewWith_Moon(context, mode).sleep(1000);
            robot1.assertDialogShown(context)
                    //.assertShowsDate(context, eventTime)    // TODO
                    .cancelDialog(context);
        }
        robot.cancelDialog(context);
    }

    @Test
    public void test_EquinoxDialog_cardItems_viewWith_worldmap()
    {
        Activity context = activityRule.getActivity();
        EquinoxDialogRobot robot = new EquinoxDialogRobot();
        robot.showDialog(context)
                .clickYearLabel(context)
                .assertDialogShown(context)
                .assertYearLabelIs(thisYear());

        SolsticeEquinoxMode[] modes = AppSettings.loadShowCrossQuarterPref(context)
                ? SolsticeEquinoxMode.values()
                : SolsticeEquinoxMode.partialValues(false);

        WorldMapDialogTest.WorldMapDialogRobot robot1 = new WorldMapDialogTest.WorldMapDialogRobot();
        for (SolsticeEquinoxMode mode : modes)
        {
            Calendar eventTime = CalculatorProviderTest.lookupEventTime(context, mode, thisYear(), robot1.now(context).getTimeZone());
            robot.assertCard_showsDateFor(context, mode, thisYear(), true);
            robot.clickCardItem(context, mode).sleep(1000)
                    .clickCardItem_menu(context, mode).sleep(500)
                    .clickCardItem_menu_viewWith(context, mode).sleep(500)
                    .clickCardItem_menu_viewWith_WorldMap(context, mode).sleep(1000);
            robot1.assertDialogShown(context)
                    .assertShowsDate(context, eventTime)
                    .cancelDialog(context);
        }
        robot.cancelDialog(context);
    }

    /**
     * EquinoxDialogRobot
     */
    public static class EquinoxDialogRobot extends DialogTest.DialogRobot<EquinoxDialogRobot>
    {
        public EquinoxDialogRobot() {
            super();
            setRobot(this);
        }

        public EquinoxDialogRobot showDialog(Activity context) {
            openActionBarOverflowOrOptionsMenu(context);
            onView(withText(R.string.action_equinoxDialog)).perform(click());
            return this;
        }

        @Override
        public EquinoxDialogRobot cancelDialog(Context context) {
            onView(withId(R.id.dialog_header)).perform(pressBack());
            return this;
        }

        public EquinoxDialogRobot clickYearLabel(Context context) {
            onView(withId(R.id.text_title1)).perform(click());
            return this;
        }
        public EquinoxDialogRobot clickYearNext(Context context) {
